# snippets

./: .gitignore  .ycm_extra_conf.py  README.md
Arsenal/Arsenal/: AppDelegate.swift  Info.plist  ViewController.swift
Arsenal/Arsenal.xcodeproj/: project.pbxproj
Arsenal/ArsenalTests/: ArsenalTests.swift  Info.plist
algorighm/: rotate_demo.cpp  upper_bound_demo.cpp
algorithm/: block.cpp  line_iterator.cpp
algorithm/priority_queue/: priority_queue.h
algorithm/stl_container_skeleton/: stl_container_skeleton.h
apue/: condition_variable.c  copy.c  deadlock_one_mutex.c  errno.c  file_hole.c  getenv.c  getenv_r.c  gethostbyname.c  getpid.c  getuid.c  host_service.c  ls.c  lseek.c  mutex.c  nonblocking_write.c  print_flag.c  read_write_lock.c  shell.c  signal.c  standard_io.c  stat.c  thread_cleanup_handler.c  thread_exit.c  thread_id.c  uptime.c
asio/file_transfer/: Makefile  file_transfer_client.cpp  file_transfer_common.h  file_transfer_server.cpp
asio/http/: Makefile
aupe/: copy
c/: common.h  debug_test.c
c/c-skeleton/: Makefile
cmake/t3/lib/: CMakeLists.txt  hello.cpp
cmake/t5/src/: CMakeLists.txt  main.cpp
cpp/: line_iterator.cpp  mem_fn.cpp  object.cpp  stack_allocator.cpp  variadic_templates  variadic_templates.cpp
cpp/tdd/money/: CMakeLists.txt
cpp/tdd/money/include/: money.h
cpp/tdd/money/src/: CMakeLists.txt
cpp/tdd/money/src/libmoney/: CMakeLists.txt  money.cpp
cpp/tdd/money/test/: CMakeLists.txt  money_test.cc
cpp/tdd/skeleton/test/: CMakeLists.txt
cpp11/: memorize.cpp
csapp/: tcp_server.cpp
gen_id/: Makefile  gen_id.cpp
go/: capture.go
hash/: Makefile  calc_hash.cpp
modern_cpp_design/: policy_based_class.cpp
pelican-blog/: pelicanconf.py  publishconf.py
pelican_blog/: pelicanconf.py  publishconf.py
poj/: 1009.cpp  1012.cpp  1050.cpp  1068.cpp  1088.cpp  template.cpp
resume/: Makefile  header.tex  resume.docx  resume.html  resume.md  resume_zhCN.docx  resume_zhCN.html  resume_zhCN.md  resume_zouxu.md  resume_zouxu_enUS.md  resume_zouxu_zhCN.md
scheme/: example.xml  qsort.scm  transform-xml.scm
sql/: ex3.sql  ex4.sql  ex5.sql  ex6.sql  ex7.db
tiny/: Makefile  common.c  tiny.c
(+973 files in other folders)
